Implemented the numbers

--- a/luck-game/src/index.css
+++ b/luck-game/src/index.css
@@ -44,6 +44,9 @@
   border-top-color: var(--border-top-color);
   border-right-color: var(--border-right-color);
   border-bottom-color: var(--border-bottom-color);
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
 
 * {
