--- a/luck-game/src/index.css
+++ b/luck-game/src/index.css
@@ -59,3 +59,26 @@
   grid-gap: 0;
   align-self: flex-start;
 }
+
+/* controls */
+.controls {
+  grid-area: b;
+  display: flex;
+  flex-direction: row;
+}
+
+/* Control Button */
+.control-button {
+  --size: calc(var(--tile-size) * 2);
+  width: var(--size);
+  height: var(--size);
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+  display: block;
+  border-width: 15px;
+  border-top-color: var(--button-color-t);
+  border-left-color: var(--button-color-l);
+  border-right-color: var(--button-color-r);
+  border-bottom-color: var(--button-color-b);
+}
