--- a/luck-game/src/index.css
+++ b/luck-game/src/index.css
@@ -99,3 +99,16 @@
   border-bottom-color: var(--button-color-b);
 }
 
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 30px 50px;
+  border: 2px solid #333;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+  font-size: 24px;
+  font-weight: bold;
+  z-index: 1000;
+}
